--- a/src/views/partials/traineeLayout.hbs
+++ b/src/views/partials/traineeLayout.hbs
@@ -5,13 +5,14 @@
     </div>
     <div class="common_interface_header_r-area">
         <div class="header_r-area-info">
-            <img src="/images/trainee/ava.jpg" alt="">
-            <label for="info-checkbox">Khanh Tran
+        {{!-- <img src="/images/avatar/avastaff.png" alt=""> --}}
+        <img src="data:image/{{user.image.contentType}};base64,{{convertImage user.image.data}}" alt="">
+            <label for="info-checkbox">{{user.name}}
                 <span class="fas fa-caret-down"></span>
             </label>
             <input type="checkbox" name="" id="info-checkbox">
             <ul>
-                <li><a href="/trainee/profile">Your profile</a></li>
+                <li><a href="/{{removeSpace user.name}}">Your profile</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
@@ -26,7 +27,7 @@
         <a href="/trainee/courses"><i class="bi bi-book"></i></i>My courses</a>
         <a href="/seeall"><i class="bi bi-briefcase"></i>Curiculum</a>
         <a href="/grade"><i class="bi bi-mortarboard"></i>My Grades</a>
-        <a href="/trainee/profile"><i class="fa fa-file-o"></i>Your Profile</a>
+        <a href="/{{removeSpace user.name}}"><i class="fa fa-file-o"></i>Your Profile</a>
         <a href="#"><i class="bi bi-box-arrow-right"></i></i>Logout</a>
     </div>
 </aside>
