--- a/src/views/trainee/profile.hbs
+++ b/src/views/trainee/profile.hbs
@@ -5,14 +5,10 @@
     {{> traineeLayout}}
 
     <main class="content-detail" id="">
-        <h3 class="fs-4 mt-5">Profile (~ 20 records)</h3>
-        <div class="content-detail-header mt-4">
-            <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Profile</button>
-            {{!-- <form action="" class="content-detail-header-search">
-                <input type="search" class="form-control" placeholder="Search by name..." aria-label="Recipient's username" aria-describedby="basic-addon2">
-                <button style="width: 90px;" class="btn btn-primary" type="submit"><i class="bi bi-search"></i></button>
-            </form> --}}
-        </div>
+        <a href="/{{user.role}}" class="btn btn-link fs-5">
+            <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
+        </a>
+        <a href="/{{removeSpace user.name}}/change_password" class="btn btn-link">Change Password</a>
         
         <table class="table table-hover table-bordered caption-top mt-5">
             {{!-- <caption class="fs-5"></caption> --}}
@@ -31,7 +27,7 @@
                 </tr>
             </thead>
             <tbody>
-                {{#each data}}
+                {{#each trainee}}
                 <tr>
                     <th scope="row" style="text-align: center;">{{@index}}</th>
                     <th scope="col">
@@ -43,102 +39,20 @@
                     <th scope="col">{{this.address}}</th>
                     <th scope="col">{{this.education}}</th>
                     <td style="text-align: center;">
-                        <div class="btn-group" style="z-index: 0; height: 40px;" role="group" aria-label="Basic mixed styles example">
-                            <a href="/trainee/edit?id={{this._id}}" class="btn btn-success js-edit-info" style="border-bottom-right-radius: unset; border-top-right-radius: unset;">
-                                <i class="bi bi-pencil-square"></i><span class=" fs-6" style="margin-left: 5px;">Edit</span>
-                            </a>
-                            <a href="/trainee/delete?id={{this._id}}" class="btn btn-danger" style="border-radius: unset;">
-                                <i class="bi bi-x-lg"></i><span class=" fs-6" style="margin-left: 5px;">Delete</span>
-                            </a>
-                        </div>
+                        <div>
+                            <button type="button" class="btn btn-success js-edit-info", style="margin-left: 30px">
+                                <i class="bi bi-pencil-square"></i>
+                                <a class ="underline-white" href="/Trainee/edit/?id={{this._id}}">
+                                    <span class=" fs-6" style="margin-left: 5px;">Edit</span>
+                                </a>
+                            </button>
+                        </div> 
                     </td>
                 </tr>
                 {{/each}}
             </tbody>
         </table>
     </main>
-
-    <div class="modal-action_form js-modal-adding_form">
-        <div class="modal-action_form-container js-modal-action_form-container">
-            <div class="modal-action_form-close js-modal-action_form-close"><i class="bi bi-x-lg"></i></div>
-            <header class="modal-action_form-header">
-                <i style="margin-right: 20px;" class="bi bi-person-plus"></i>
-                New Profile
-            </header>
-
-            <form class="modal-action_form-body" method="POST" action="/trainee/profile/store" enctype="multipart/form-data">
-                <div>
-                    <label for="email" class="">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Your email..." required>
-                </div>
-                <div>
-                    <label for="name" class="">Full name</label>
-                    <input type="text" name="name" id="name" placeholder="Your full name..." required>
-                </div>
-                <div>
-                    <label for="address" class="">Address</label>
-                    <input type="text" name="address" id="address" placeholder="Your address..." required>
-                </div>
-                <div>   
-                    <label for="dob" class="">Date of birth</label>
-                    <input type="string" name="dob" id="dob" placeholder="Your date of birth..." required>
-                </div>
-                <div>
-                    <label for="education" class="">Education</label>
-                    <input type="text" name="education" id="education" placeholder="Your education..." required>
-                </div>
-                <div>   
-                    <label for="avatar" class="">Avatar</label>
-                    <input type="file" name="image" id="avatar" accept="image/*">
-                </div>
-                <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
-            </form>
-
-            <footer class="modal-action_form-footer">
-                <p style="margin-bottom: 6px;">Need <a href="#">help?</a></p>
-            </footer>
-        </div>
-    </div>
-
-    {{!-- block of code for editing --}}
-    {{!-- <div class="modal-action_form js-modal-editing_form">
-        <div class="modal-action_form-container js-modal-action_form-container">
-            <div class="modal-action_form-close js-modal-action_form-close"><i class="bi bi-x-lg"></i></div>
-            <header class="modal-action_form-header">
-                <i style="margin-right: 20px;" class="bi bi-person"></i>
-                Current Account
-            </header>
-
-            <form class="modal-action_form-body" method="POST" action="/trainee/create">
-                <div>
-                    <label for="editEmail" class="">Email</label>
-                    <input type="email" value="{{account.email}}" name="email" id="editEmail" placeholder="Your email..." required>
-                </div>
-                <div>
-                    <label for="editFullName" class="">Full name</label>
-                    <input type="text" value="{{account.name}}" name="fullName" id="editFullName" placeholder="Your full name..." required>
-                </div>
-                <div>
-                    <label for="editPassword" class="">Password</label>
-                    <input type="password" name="password" id="editPassword" placeholder="Your password..." required>
-                </div>
-                <div>
-                    <label for="editAddress" class="">Address</label>
-                    <input type="text" name="address" id="editAddress" placeholder="Your address..." required>
-                </div>
-                <div>   
-                    <label for="editDoB" class="">Date of birth</label>
-                    <input type="text" name="doB" id="editDoB" placeholder="Your date of birth..." required>
-                </div>
-                <button type="submit" class="btn-action">Update<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
-            </form>
-
-            <footer class="modal-action_form-footer">
-                <p style="margin-bottom: 6px;">Need <a href="#">help?</a></p>
-            </footer>
-        </div>
-    </div> --}}
-
 {{> bottom}}
 </body>
 </html>
