update manage course, category

--- a/src/views/courses/index.hbs
+++ b/src/views/courses/index.hbs
@@ -93,7 +93,6 @@
                     {{/each }}
                 </select>
                 </div>
-
                 <div class="form-group">
                     <label for="courseDescription">Course Description</label>
                     <textarea class="form-control" id="courseDescription" name="description" placeholder="Course Description..." required></textarea>
@@ -113,8 +112,10 @@
                 <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
             </form>
             <footer class="modal-action_form-footer">
-                <p style="margin-bottom: 6px;">Need <a href="#">help?</a></p>
+                <a href="#" class="cancel">Cancel</a>
+                Need <a href="#">help?</a>
             </footer>
+
         </div>
     </div>
     </div>
