--- a/src/views/categories/index.hbs
+++ b/src/views/categories/index.hbs
@@ -83,8 +83,9 @@
                 </div>
                 <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
             </form>
-            <footer class="modal-action_form-footer">
-                <p style="margin-bottom: 6px;">Need <a href="#">help?</a></p>
+              <footer class="modal-action_form-footer">
+                <a href="#" class="cancel">Cancel</a>
+                Need <a href="#">help?</a>
             </footer>
         </div>
     </div>
