--- a/src/views/admin/admin-accounts.hbs
+++ b/src/views/admin/admin-accounts.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 {{> head}}
 <body>
-    {{!-- {{> adminLayout}} --}}
+    {{> adminLayout}}
 
     <main class="content-detail" id="content-detail">
         <h3 class="fs-4 mt-5">Accounts (~ {{total}} records)</h3>
