--- a/src/views/staff/trainee-accounts.hbs
+++ b/src/views/staff/trainee-accounts.hbs
@@ -22,6 +22,7 @@
                     <th scope="col" style="width: 190px;">Avatar</th>
                     <th scope="col" style="width: 150px;">Email</th>
                     <th scope="col">Full name</th>
+                    <th scope="col">Code</th>
                     <th scope="col" style="width: 90px;">Education</th>
                     <th scope="col" style="width: 60px;">Age</th>
                     <th scope="col" style="width: 130px;">Date of birth</th>
@@ -42,6 +43,7 @@
                     </td>
                     <td scope="col">{{this.email}}</td>
                     <td scope="col" style="text-align: center;">{{this.name}}</td>
+                    <td scope="col" style="text-align: center;">{{this.code}}</td>
                     <td scope="col" style="text-align: center;">{{this.education}}</td>
                     <td scope="col" style="text-align: center;">{{calculateAge this.dob}}</td>
                     <td scope="col" style="text-align: center;">{{this.dob}}</td>       
