--- a/src/views/trainee/edit.hbs
+++ b/src/views/trainee/edit.hbs
@@ -5,12 +5,12 @@
     {{> traineeLayout}}
 
     <main class="content-detail" id="common_content-area">
-        <a href="/trainee/profile" class="btn btn-link fs-5">
+        <a href="/{{removeSpace user.name}}" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="/trainee/update?id={{data._id}}" enctype="multipart/form-data">
+        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{trainee._id}}" enctype="multipart/form-data">
             <div class="text-left">
-                <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{data.image.contentType}};base64,{{convertImage data.image.data}}" alt="" class="img-thumbnail">
+                <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{trainee.image.contentType}};base64,{{convertImage trainee.image.data}}" alt="" class="img-thumbnail">
                 <div class="chosen_image-container">
                     <img style="width: 170px; height: 170px;" src="" class="img-thumbnail" id="chosenImage" alt="">
                     <i id="cancel-btn" class="bi bi-x-lg"></i>
@@ -20,29 +20,31 @@
                 <label class="input-group-text" style="cursor: pointer;" for="btn-upload-img">Upload</label>
             </div>
 
-         <div class="col-12">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" value="{{data.email}}" required>
+            <div class="col-12">
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" name="email" value="{{trainee.email}}" required placeholder="Your email address...">
             </div>
             <div class="col-12">
                 <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{data.name}}" required>
+                <input type="text" class="form-control" id="fullName" name="name" value="{{trainee.name}}" required placeholder="Your full name...">
+            </div>
+            <div class="col-12">
+                <label for="code" class="form-label">Code</label>
+                <input type="text" class="form-control" id="code" name="code" value="{{trainee.code}}" required placeholder="Your code...">
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
-                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate data.dob}}" required>
+                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate trainee.dob}}" required>
+            </div>
+            <div class="col-12">
+                <label for="edu" class="form-label">Education</label>
+                <input type="text" class="form-control" id="edu" name="education" value="{{convertDate trainee.education}}" required>
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required>{{data.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{trainee.address}}</textarea>
             </div>
-            <div class="mb-3">
-                <label for="education" class="form-label">Education</label>
-                <textarea class="form-control" id="education" rows="3" name="education" required>{{data.address}}</textarea>
-            </div>
-            {{!-- <div class="input-group mt-4 mb-3"> --}}
                 <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
-            {{!-- </div> --}}
             <div class="col-12 mt-5">
                 <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
@@ -50,6 +52,11 @@
             </div>
         </form>
     </main>
-{{> bottom}} 
+
+    <script>
+        previewImageAndClose();
+    </script>
+
+{{> frameworkCDN}}
 </body>
 </html>
