view, edit profile for admin, trainer

--- a/src/views/partials/staffLayout.hbs
+++ b/src/views/partials/staffLayout.hbs
@@ -25,9 +25,8 @@
         <h2>Menu</h2>
         <a href="/staff"><i class="fas fa-user-circle"></i>Home</a>
         <a href="/staff/trainee-accounts"><i class="fa fa-users"></i>Trainee Accounts</a>
-        <a href="/categories"><i class="bi bi-stack"></i>Categories Course</a>
-        <a href="/courses"><i class="bi bi-book"></i>Course</a>
-        {{!-- <a href="/staff/profile"><i class="fa fa-file-o"></i>Your Profile</a> --}}
+        <a href="/staff/categories"><i class="bi bi-stack"></i>Categories Course</a>
+        <a href="/staff/courses"><i class="bi bi-book"></i>Course</a>
         <a href="/{{removeSpace user.name}}"><i class="fa fa-file-o"></i>Your Profile</a>
         <a href="/logout"><i class="fa fa-phone"></i>Logout</a>
     </div>
