--- a/src/views/staff/trainee-accounts.hbs
+++ b/src/views/staff/trainee-accounts.hbs
@@ -22,10 +22,11 @@
                     <th scope="col" style="width: 190px;">Avatar</th>
                     <th scope="col" style="width: 150px;">Email</th>
                     <th scope="col">Full name</th>
-                    <th scope="col" style="width: 90px;">Education</th>
+                    <th scope="col">Code</th>
                     <th scope="col" style="width: 60px;">Age</th>
                     <th scope="col" style="width: 130px;">Date of birth</th>
                     <th scope="col">Address</th>
+                    <th scope="col">Education</th>
                     <th scope="col" style="width: 220px;">
                         <i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span>
                     </th>
@@ -42,10 +43,12 @@
                     </td>
                     <td scope="col">{{this.email}}</td>
                     <td scope="col" style="text-align: center;">{{this.name}}</td>
-                    <td scope="col" style="text-align: center;">{{this.education}}</td>
+                    <td scope="col" style="text-align: center;">{{this.code}}</td>
                     <td scope="col" style="text-align: center;">{{calculateAge this.dob}}</td>
                     <td scope="col" style="text-align: center;">{{this.dob}}</td>       
                     <td scope="col">{{this.address}}</td>
+                    <td scope="col" style="text-align: center;">{{this.education}}</td>
+                    
                     <td style="text-align: center;">
                         <div>
                             <div class="btn-group" style="z-index: 0; height: 40px; width: 199px;" role="group" aria-label="Basic mixed styles example">
