--- a/src/views/trainer/edit.hbs
+++ b/src/views/trainer/edit.hbs
@@ -2,22 +2,61 @@
 <html lang="en">
 {{> head}}
 <body>
-    <div class="container">
-        <div class="mt-4">
-            <h3>Update Demo</h3>
-        </div>
-        <form class="mt-4" method="POST", action="/demo/update/?id={{data._id}}">
-            <div class="form-group">
-                <label for="name">Demo Name</label>
-                <input type="text" class="form-control" value="{{data.name}}" id="name" name="name">
+        {{> trainerLayout}}
+        
+    <main class="content-detail" id="common_content-area">
+        <a href="/{{removeSpace user.name}}" class="btn btn-link fs-5">
+            <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
+        </a>
+        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{trainer._id}}" enctype="multipart/form-data">
+            <div class="text-left">
+                <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{trainer.image.contentType}};base64,{{convertImage trainer.image.data}}" alt="" class="img-thumbnail">
+                <div class="chosen_image-container">
+                    <img style="width: 170px; height: 170px;" src="" class="img-thumbnail" id="chosenImage" alt="">
+                    <i id="cancel-btn" class="bi bi-x-lg"></i>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="description">Demo Description</label>
-                <textarea class="form-control" id="description" name="description">{{data.description}}</textarea>
+            <div class="col-12 mt-4 mb-3">
+                <label class="input-group-text" style="cursor: pointer;" for="btn-upload-img">Upload</label>
             </div>
-            <button type="submit" class="btn btn-primary">Update</button>
+
+            <div class="col-12">
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" name="email" value="{{trainer.email}}" required placeholder="Your email address...">
+            </div>
+            <div class="col-12">
+                <label for="fullName" class="form-label">Full name</label>
+                <input type="text" class="form-control" id="fullName" name="name" value="{{trainer.name}}" required placeholder="Your full name...">
+            </div>
+            <div class="col-12">
+                <label for="code" class="form-label">Code</label>
+                <input type="text" class="form-control" id="Code" name="code" value="{{trainer.code}}" required placeholder="Your code...">
+            </div>
+            <div class="col-12">
+                <label for="dob" class="form-label">Date of birth</label>
+                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate trainer.dob}}" required>
+            </div>
+            <div class="mb-3">
+                <label for="sp" class="form-label">Specialty</label>
+                <input class="form-control" id="sp" rows="3" name="specialty" value="{{trainer.specialty}}" required placeholder="Your Specialty...">
+            </div>
+            <div class="mb-3">
+                <label for="address" class="form-label">Address</label>
+                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{trainer.address}}</textarea>
+            </div>
+                <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
+            <div class="col-12 mt-5">
+                <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
+                    <i class="bi bi-check2 fs-5"></i>
+                </button>
+            </div>
         </form>
-    </div>
-{{> bottom}}
+    </main>
+
+    <script>
+        previewImageAndClose();
+    </script>
+
+{{> frameworkCDN}}
 </body>
 </html>
