--- a/src/views/trainer/viewGrade.hbs
+++ b/src/views/trainer/viewGrade.hbs
@@ -17,10 +17,12 @@
             {{!-- <caption class="fs-5"></caption> --}}
             <thead class="table-light">
                 <tr style="font-size: 18px; text-align: center;">
-                    <th scope="col" style="width: 90px;">Position</th>
-                    <th scope="col" style="width: 100px;">Class Name</th>
+                    <th scope="col" style="width: 90px;">#</th>
+                    <th scope="col" style="width: 100px;">Code</th>
                     <th scope="col" style="width: 190px;">Course Name</th>
-                    <th scope="col" style="width: 120px;">Total Trainees</th>
+                    <th scope="col" style="width: 120px;">Trainer</th>
+                    <th scope="col" style="width: 120px;">Class</th>
+                    <th scope="col" style="width: 120px;">Grade</th>
                     <th scope="col" style="width: 220px;">
                         <i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span>
                     </th>
@@ -29,16 +31,16 @@
             <tbody>
                 {{#each data}}
                 <tr>
-                    <th scope="row" style="text-align: center;">{{this.position}}</th>
+                    <th scope="row" style="text-align: center;">{{@index}}</th>
                     <td scope="col" style="text-align: center;">{{this.class_name}}</td>
                     <td scope="col" style="text-align: center;">{{this.course_name}}</td>
                     <td scope="col" style="text-align: center;">{{this.total_trainees}}</td>     
                     <td style="text-align: center;">
                         <div>
                             <div class="btn-group" style="z-index: 0; height: 40px; width: 199px;" role="group" aria-label="Basic mixed styles example">
-                                <a href="/trainer/assignedCourse/viewclass?id={{_id}}" class="btn btn-success js-edit-info" style="border-bottom-left-radius: unset;">
+                                <a href="/trainer/viewGrade/gradeTrainees?id={{_id}}" class="btn btn-success js-edit-info" style="border-bottom-left-radius: unset;">
                                     <i class="bi bi-pencil-square"></i>
-                                    <span class=" fs-6" style="margin-left: 5px;">View</span>
+                                    <span class=" fs-6" style="margin-left: 5px;">Grade</span>
                                 </a>
                             </div>
                         </div>
