--- a/src/views/trainer/viewclass.hbs
+++ b/src/views/trainer/viewclass.hbs
@@ -5,7 +5,7 @@
     {{> trainerLayout}}
 
     <main class="content-detail" id="">
-        <a href="/trainer" type="button" class="btn btn-link fs-5">
+        <a href="/trainer/assignedCourse" type="button" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
         <div class="content-detail-header mt-4">
@@ -16,79 +16,37 @@
         </div>
         
         <table class="table table-hover table-bordered caption-top mt-5">
-            {{!-- <caption class="fs-5"></caption> --}}
+            <caption class="fs-5"></caption>
              <thead class="table-light">
                 <tr style="font-size: 18px; text-align: center;">
-                    {{!-- <th scope="col">#</th> --}}
-                    {{!-- <th scope="col" style="width: 190px;">Image</th>
-                    <th scope="col" style="width: 190px;">Email</th> --}}
-                    <th scope="col" style="width: 190px;">Code</th>
-                    {{!-- <th scope="col" style="width: 290px;">Name</th>
-                    <th scope="col" style="width: 190px;">Date of Birth</th>
-                    <th scope="col" style="width: 190px;">Grade Status</th> --}}
-                    <th scope="col">
-                        <i class="bi bi-tools fs-5"></i><span style="margin-left: 5px;">Action</span>
-                    </th>
+                    <th scope="col">#</th>
+                    <th scope="col" style="width: 200px;">Email</th>
+                    <th scope="col" style="width: 290px;">Image</th>
+                    <th scope="col" style="width: 290px;">Name</th>
+                    <th scope="col" style="width: 210px;">Code</th>
+                    <th scope="col" style="width: 220px;">DOB</th>
+                    <th scope="col" style="width: 220px;">Address</th>
+                    <th scope="col" style="width: 220px;">Education</th>
                 </tr>
             </thead>
             <tbody>
                {{#each data}} 
                 <tr>
                     <th scope="row" style="text-align: center;">{{@index}}</th>
-                    <th scope="col">
-                        {{!-- <img style="width: 170px; height: 170px;" src="data:image/{{this.image.contentType}};base64,{{convertImage this.image.data}}" alt=""> --}}
+                    <th scope="col" style="text-align: center;">{{this.email}}</th>
+                   <th scope="col">
+                        <img style="width: 170px; height: 170px;" src="data:image/{{this.image.contentType}};base64,{{convertImage this.image.data}}" alt="">
                     </th>
-                    {{!-- <th scope="col">{{this.email}}</th> --}}
-                    {{!-- <th scope="col" style="text-align: center;">{{this.name}}</th> --}}
-                    <th scope="col" style="text-align: center;">{{this.trainee_code}}</th>
-                    {{!-- <th scope="col" style="text-align: center;">{{this.dob}}</th>
-                    <th scope="col" style="text-align: center;">{{this.grade_status}}</th> --}}
-                    <td style="text-align: center;">
-                        <div class="btn-group" style="z-index: 0; height: 40px;" role="group" aria-label="Basic mixed styles example">
-                            <a href="/trainer/assignedCourse/viewclass?id=" class="btn btn-success js-edit-info" style="border-bottom-right-radius: unset; border-top-right-radius: unset;">
-                                <i class="bi bi-pencil-square"></i><span class=" fs-6" style="margin-left: 5px;">Grade</span>
-                            </a>
-                        </div>
-                    </td>
+                    <th scope="col" style="text-align: center;">{{this.name}}</th>
+                    <th scope="col" style="text-align: center;">{{this.code}}</th>
+                    <th scope="col" style="text-align: center;">{{this.dob}}</th>
+                    <th scope="col" style="text-align: center;">{{this.address}}</th>
+                    <th scope="col" style="text-align: center;">{{this.education}}</th>
                 </tr>
             {{/each}}
             </tbody>
         </table>
     </main>
-
-    {{!-- <div class="modal-action_form js-modal-adding_form">
-        <div class="modal-action_form-container js-modal-action_form-container">
-            <div class="modal-action_form-close js-modal-action_form-close"><i class="bi bi-x-lg"></i></div>
-            <header class="modal-action_form-header">
-                <i style="margin-right: 20px;" class="bi bi-person-plus"></i>
-                New trainee
-            </header>
-
-            <form class="modal-action_form-body" method="POST" action="/seeall/store" enctype="multipart/form-data">
-                <div>
-                    <label for="email" class="">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Your email..." required>
-                </div>
-                <div>
-                    <label for="name" class="">Full name</label>
-                    <input type="text" name="name" id="name" placeholder="Your full name..." required>
-                </div>
-                <div>   
-                    <label for="dob" class="">Date of birth</label>
-                    <input type="string" name="dob" id="dob" placeholder="Your date of birth..." required>
-                </div>
-                <div>   
-                    <label for="avatar" class="">Avatar</label>
-                    <input type="file" name="image" id="avatar" accept="image/*">
-                </div>
-                <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
-            </form>
-            <footer class="modal-action_form-footer">
-                <p style="margin-bottom: 6px;">Need <a href="#">help?</a></p>
-            </footer>
-        </div>
-    </div> --}}
-
 {{> bottom}}
 </body>
 </html>
