--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -341,9 +341,9 @@
     min-height: 100vh;
     margin-top: 70px;
 }
-#content-detail {
-    min-width: 1349px;
-}
+/* #content-detail { */
+    /* min-width: 1349px; */
+/* } */
 
 
 /* ending block */
@@ -650,4 +650,9 @@
 .msg {
     color: red;
     display: block;
+}
+
+/* Flash Msg */
+.flashMsg-close {
+    display: none;
 }
